import {
  AsiakirjaTyyppi,
  ELY,
  IlmoitettavaViranomainen,
  KayttajaTyyppi,
  Kieli,
  KirjaamoOsoite,
  ProjektiTyyppi,
  SuunnittelustaVastaavaViranomainen,
} from "hassu-common/graphql/apiModel";
import { GeneratePDFEvent } from "../../../src/asiakirja/lambda/generatePDFEvent";
import { handleEvent } from "../../../src/asiakirja/lambda/pdfGeneratorHandler";
import * as sinon from "sinon";
import { parameters } from "../../../src/aws/parameters";
import { GetParameterCommand, SSM } from "@aws-sdk/client-ssm";
import { mockClient } from "aws-sdk-client-mock";
import { expect } from "chai";
import fs from "fs";
import { KaannettavaKieli } from "hassu-common/kaannettavatKielet";
import { fileService } from "../../../src/files/fileService";
import { bankHolidaysClient } from "../../../src/endDateCalculator/bankHolidaysClient";
import { BankHolidays } from "../../../src/endDateCalculator/bankHolidays";

const kirjaamoOsoitteet: KirjaamoOsoite[] = [
  { __typename: "KirjaamoOsoite", nimi: IlmoitettavaViranomainen.VAYLAVIRASTO, sahkoposti: "kirjaamo@vayla.fi" },
  { __typename: "KirjaamoOsoite", nimi: IlmoitettavaViranomainen.UUDENMAAN_ELY, sahkoposti: "kirjaamo@ely.fi" },
];

type PdfEvent = {
  asiakirjaTyyppi: AsiakirjaTyyppi;
  kieli: KaannettavaKieli;
  ensisijainenKieli: KaannettavaKieli;
  suunnittelustaVastaavaViranomainen: SuunnittelustaVastaavaViranomainen;
  tyyppi: ProjektiTyyppi;
  lisaaOsoite: boolean;
  eunRahoittama: boolean;
  toissijainenKieli?: KaannettavaKieli;
  vahainenMenettely?: boolean;
  vanha?: boolean;
};

function pdfFileName({ tyyppi, kieli }: PdfEvent) {
  if (tyyppi === ProjektiTyyppi.TIE) {
    return `T412 Aloituskuulutus${kieli === Kieli.RUOTSI ? " sv" : ""}.pdf`;
  } else if (tyyppi === ProjektiTyyppi.RATA) {
    return `10R Aloituskuulutus${kieli === Kieli.RUOTSI ? " sv" : ""}.pdf`;
  } else {
    return `10YS Aloituskuulutus${kieli === Kieli.RUOTSI ? " sv" : ""}.pdf`;
  }
}

function testPdfFileName({
  tyyppi,
  kieli,
  suunnittelustaVastaavaViranomainen,
  vahainenMenettely,
  vanha,
  eunRahoittama,
  asiakirjaTyyppi,
}: PdfEvent) {
  return (
    __dirname +
    `/${tyyppi.toLocaleLowerCase()}_${
      suunnittelustaVastaavaViranomainen === SuunnittelustaVastaavaViranomainen.VAYLAVIRASTO ? "vayla" : "ely"
    }${vahainenMenettely ? "_vahainen" : ""}${eunRahoittama ? "_eu" : ""}${vanha ? "_vanha" : ""}${
      kieli === Kieli.RUOTSI ? "_sv" : ""
    }_${asiakirjaTyyppi.toLowerCase()}.pdf`
  );
}

function generateEvent(event: PdfEvent): GeneratePDFEvent {
  return {
    createAloituskuulutusPdf: {
      asiakirjaTyyppi: event.asiakirjaTyyppi,
      asianhallintaPaalla: false,
      kayttoOikeudet: [
        {
          etunimi: "Teppo",
          sukunimi: "Projektipäällikkö",
          email: "teppo@vayla.fi",
          kayttajatunnus: "XXX",
          tyyppi: KayttajaTyyppi.PROJEKTIPAALLIKKO,
          organisaatio:
            event.suunnittelustaVastaavaViranomainen === SuunnittelustaVastaavaViranomainen.VAYLAVIRASTO ? "Väylävirasto" : "ELY",
          elyOrganisaatio: ELY.UUDENMAAN_ELY,
        },
      ],
      aloitusKuulutusJulkaisu: {
        id: 1,
        kielitiedot: {
          ensisijainenKieli: event.ensisijainenKieli,
          toissijainenKieli: event.toissijainenKieli,
          projektinNimiVieraskielella: "Projekti 1 på svenska",
        },
        kuulutusYhteystiedot: {},
        kuulutusPaiva: "2024-01-01",
        hankkeenKuvaus: {
          SUOMI: "Hankkeen kuvaus",
          RUOTSI: "Hankkeen kuvaus på svenska",
        },
        yhteystiedot: [
          {
            etunimi: "Testi",
            sukunimi: "Teppo",
            kunta: 91,
            puhelinnumero: "029",
            sahkoposti: "test@vayla.fi",
          },
        ],
        velho: {
          nimi: "Projekti 1",
          asiatunnusELY: "ELY/456",
          asiatunnusVayla: "VAYLA/123",
          tyyppi: event.tyyppi,
          kunnat: [91],
          suunnittelustaVastaavaViranomainen: event.suunnittelustaVastaavaViranomainen,
          vaylamuoto: ["tie", "rata"],
        },
      },
      kieli: event.kieli,
      linkkiAsianhallintaan: undefined,
      luonnos: false,
      lyhytOsoite: "lyhytOsoite",
      oid: "1.2.3",
      vahainenMenettely: event.vahainenMenettely,
      euRahoitusLogot: event.eunRahoittama
        ? {
            SUOMI: "xxx",
            RUOTSI: "yyy",
          }
        : undefined,
    },
  };
}

describe("pdfGeneratorHandlerAloituskuulutus", () => {
  let parameterStub: sinon.SinonStub;
  before(() => {
    parameterStub = sinon.stub(parameters, "isSuomiFiViestitIntegrationEnabled");
    sinon.stub(bankHolidaysClient, "getBankHolidays").resolves(new BankHolidays([]));
    mockClient(SSM)
      .on(GetParameterCommand, { Name: "/kirjaamoOsoitteet" })
      .resolves({ Parameter: { Value: JSON.stringify(kirjaamoOsoitteet) } });
    sinon.stub(fileService, "getProjektiFile").resolves(fs.readFileSync(__dirname + "/eulogo.jpg"));
  });
  after(() => {
    sinon.restore();
  });
  beforeEach(() => {
    parameterStub.resolves(true);
  });
  it("generate aloituskuulutus tie vaylavirasto", async () => {
    const event: PdfEvent = {
      asiakirjaTyyppi: AsiakirjaTyyppi.ALOITUSKUULUTUS,
      kieli: Kieli.SUOMI,
      ensisijainenKieli: Kieli.SUOMI,
      suunnittelustaVastaavaViranomainen: SuunnittelustaVastaavaViranomainen.VAYLAVIRASTO,
      tyyppi: ProjektiTyyppi.TIE,
      lisaaOsoite: true,
      eunRahoittama: false,
    };
    const pdf = await handleEvent(generateEvent(event));
    expect(pdf.textContent).toMatchSnapshot();
    expect(pdf.nimi).to.equal(pdfFileName(event));
    fs.writeFileSync(testPdfFileName(event), Buffer.from(pdf.sisalto, "base64"));
  });
  it("generate aloituskuulutus rata vaylavirasto", async () => {
    const event: PdfEvent = {
      asiakirjaTyyppi: AsiakirjaTyyppi.ALOITUSKUULUTUS,
      kieli: Kieli.SUOMI,
      ensisijainenKieli: Kieli.SUOMI,
      suunnittelustaVastaavaViranomainen: SuunnittelustaVastaavaViranomainen.VAYLAVIRASTO,
      tyyppi: ProjektiTyyppi.RATA,
      lisaaOsoite: true,
      eunRahoittama: false,
    };
    const pdf = await handleEvent(generateEvent(event));
    expect(pdf.textContent).toMatchSnapshot();
    expect(pdf.nimi).to.equal(pdfFileName(event));
    fs.writeFileSync(testPdfFileName(event), Buffer.from(pdf.sisalto, "base64"));
  });
  it("generate aloituskuulutus yleinen vaylavirasto", async () => {
    const event: PdfEvent = {
      asiakirjaTyyppi: AsiakirjaTyyppi.ALOITUSKUULUTUS,
      kieli: Kieli.SUOMI,
      ensisijainenKieli: Kieli.SUOMI,
      suunnittelustaVastaavaViranomainen: SuunnittelustaVastaavaViranomainen.VAYLAVIRASTO,
      tyyppi: ProjektiTyyppi.YLEINEN,
      lisaaOsoite: true,
      eunRahoittama: false,
    };
    const pdf = await handleEvent(generateEvent(event));
    expect(pdf.textContent).toMatchSnapshot();
    expect(pdf.nimi).to.equal(pdfFileName(event));
    fs.writeFileSync(testPdfFileName(event), Buffer.from(pdf.sisalto, "base64"));
  });
  it("generate aloituskuulutus tie ely", async () => {
    const event: PdfEvent = {
      asiakirjaTyyppi: AsiakirjaTyyppi.ALOITUSKUULUTUS,
      kieli: Kieli.SUOMI,
      ensisijainenKieli: Kieli.SUOMI,
      suunnittelustaVastaavaViranomainen: SuunnittelustaVastaavaViranomainen.UUDENMAAN_ELY,
      tyyppi: ProjektiTyyppi.TIE,
      lisaaOsoite: true,
      eunRahoittama: false,
    };
    const pdf = await handleEvent(generateEvent(event));
    expect(pdf.textContent).toMatchSnapshot();
    expect(pdf.nimi).to.equal(pdfFileName(event));
    fs.writeFileSync(testPdfFileName(event), Buffer.from(pdf.sisalto, "base64"));
  });
  it("generate aloituskuulutus rata ely", async () => {
    const event: PdfEvent = {
      asiakirjaTyyppi: AsiakirjaTyyppi.ALOITUSKUULUTUS,
      kieli: Kieli.SUOMI,
      ensisijainenKieli: Kieli.SUOMI,
      suunnittelustaVastaavaViranomainen: SuunnittelustaVastaavaViranomainen.UUDENMAAN_ELY,
      tyyppi: ProjektiTyyppi.RATA,
      lisaaOsoite: true,
      eunRahoittama: false,
    };
    const pdf = await handleEvent(generateEvent(event));
    expect(pdf.textContent).toMatchSnapshot();
    expect(pdf.nimi).to.equal(pdfFileName(event));
    fs.writeFileSync(testPdfFileName(event), Buffer.from(pdf.sisalto, "base64"));
  });
  it("generate aloituskuulutus yleinen ely", async () => {
    const event: PdfEvent = {
      asiakirjaTyyppi: AsiakirjaTyyppi.ALOITUSKUULUTUS,
      kieli: Kieli.SUOMI,
      ensisijainenKieli: Kieli.SUOMI,
      suunnittelustaVastaavaViranomainen: SuunnittelustaVastaavaViranomainen.UUDENMAAN_ELY,
      tyyppi: ProjektiTyyppi.YLEINEN,
      lisaaOsoite: true,
      eunRahoittama: false,
    };
    const pdf = await handleEvent(generateEvent(event));
    expect(pdf.textContent).toMatchSnapshot();
    expect(pdf.nimi).to.equal(pdfFileName(event));
    fs.writeFileSync(testPdfFileName(event), Buffer.from(pdf.sisalto, "base64"));
  });
});
